# MewOS

./: Cargo.toml
src/: main.rs
ui/: main.slint
