[package]
name = "mew-os"
version = "0.1.0"
authors = ["Kayoosh Studio"]
edition = "2021"
resolver = "2"

[dependencies]
log = "0.4"
anyhow = "1.0"
chrono = "0.4" # Для времени

# Slint с поддержкой программного рендеринга (важно для микроконтроллеров)
slint = { version = "1.5", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
    "backend-winit"
] }

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-sys = { version = "0.35", features = ["binstart"] }
esp-idf-svc = { version = "0.49", features = ["alloc"] }

[target.'cfg(not(target_os = "espidf"))'.dependencies]
env_logger = "0.11"
webbrowser = "1.0"

[build-dependencies]
slint-build = "1.5"
